--- a/Lesson2/css/large.css
+++ b/Lesson2/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 45em /* 40.1em */) {
+@media only screen and (min-width: 45em) {
   body{
     max-width: 75%;
   }
