--- a/Lesson2/css/medium.css
+++ b/Lesson2/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 28.8em) {
+@media only screen and (min-width: 43.2em) {
   body {
     margin: 0 auto;
     max-width: 95%;
@@ -12,5 +12,6 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
     row-gap: 1rem;
+    margin-top: 2rem;
   }
 }
