--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -18,6 +18,11 @@
   --fourth-color: #C38D9E;
   --fifth-color: #41B3A3;
 }
+
+body {
+  padding: 0px 15px;
+}
+
 nav {
   font-family: 'Noto Sans', sans-serif;
   background-color: var(--primary-color);
