changing to stub out nav and width restriction

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -122,6 +122,10 @@ p {
   font-weight: bold;
 }
 
+main div {
+  margin-left: 2%;
+}
+
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
