--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -15,6 +15,12 @@
     max-width: 95%;
   }
 
+  main div.images {
+    margin-left: auto;
+    row-gap: unset;
+    grid-template-columns: 1fr 1fr;
+  }
+
   div.hero-placeholder {
     position: relative;
   }
