--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -159,25 +159,11 @@ main div.images img {
 }
 
 p#five_day_forecast_title {
-  color: white;
-  background-color: var(--secondary-color);
-  text-align: center;
-  border: 1px solid black;
-  margin-bottom: 0rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  display: none;
 }
 
 div#five_day_forecast_table {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  border: 1px solid black;
-  border-bottom: none;
-  background-color:black;
-  column-gap: 1px;
-  row-gap: 1px;
-  margin-left: 0px;
-  margin-bottom: 1rem;
+  display: none;
 }
 
 span.weather-top {
