--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -45,6 +45,29 @@
     width: 100%;
   }
 
+  p#five_day_forecast_title {
+    display: block;
+    color: white;
+    background-color: var(--secondary-color);
+    text-align: center;
+    border: 1px solid black;
+    margin-bottom: 0rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }  
+
+  div#five_day_forecast_table {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    border: 1px solid black;
+    border-bottom: none;
+    background-color:black;
+    column-gap: 1px;
+    row-gap: 1px;
+    margin-left: 0px;
+    margin-bottom: 1rem;
+  }
+
 
   img#article-img {
     width: auto;
