--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -125,6 +125,68 @@ nav a:hover {
   background-color: rgba(232, 168, 124, 0.6);
 }
 
+/**********************
+ *                    *
+ *     Storm page     *
+ *                    *
+ **********************/
+
+form input {
+  display: block;
+  padding-top: 1.375rem;
+  padding-bottom: 1.375rem; 
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+form input:invalid {
+  border-left: red 6px solid;
+}
+
+form input:required:valid {
+  border-left: green 6px solid;
+}
+
+form p {
+  margin-top: 4rem;
+  font-family: "Noto Sans", sans-serif;
+}
+
+form select {
+  display: block;
+  padding-top: 1.375rem;
+  padding-bottom: 1.375rem; 
+}
+
+form input[type=radio] {
+  display: inline-block;
+  width: unset;
+}
+
+form label.radio {
+  display: block;
+  padding-top: 1.375rem;
+  padding-bottom: 1.375rem;
+}
+
+fieldset textarea {
+  width: 100%;
+}
+
+form input[type=submit] {
+  margin-top: 1rem;
+  color: white;
+  background-color: var(--fourth-color);
+}
+
+/**********************
+ *                    *
+ *    preston page    *
+ *                    *
+ **********************/
+
+
+
 
 div.hero-placeholder img {
   max-width: 100%;
@@ -187,6 +249,14 @@ span.weather-bottom img {
 img#article-img {
   width: 100%;
 }
+
+
+
+/**********************
+ *                    *
+ *    contact page    *
+ *                    *
+ **********************/
 
 div.contact {
   background-color: var(--third-color);
