updating to improve lighthouse report

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -175,7 +175,7 @@ fieldset textarea {
 
 form input[type=submit] {
   margin-top: 1rem;
-  color: white;
+  color: black;
   background-color: var(--fourth-color);
 }
 
