--- a/lesson9/css/footer.css
+++ b/lesson9/css/footer.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-color: #E27D60;
+  --secondary-color: #8855DD;
+  --third-color: #E8A87C;
+  --fourth-color: #C38D9E;
+  --fifth-color: #41B3A3;
+}
+
 footer {
   font-size: 1.25rem;
   background-color: var(--primary-color);
