--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -126,6 +126,20 @@ main div {
   margin-left: 2%;
 }
 
+/***************
+ * placeholder *
+ **************/
+
+div.contentbox {
+  display: block;
+  margin: 10px auto;
+  border: 1px dashed #000;
+  padding: 15px;
+  background-color: #eee;
+  color: #444;
+  font-style: italic;
+}
+
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
