--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -34,6 +34,51 @@
     border-right: none;
   }
 
+  /*************************************
+  *            CSS cards              *
+  * dynamically created by JavaScript *
+  *************************************/
+
+  div#cards {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: unset;
+    column-gap: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: var(--secondary-color);
+  }
+
+  div#cards section {
+    display: block;
+    justify-self: center;
+    align-self: end;
+    max-width: 85%;
+  }
+
+  div#cards span h2 {
+    font-size: 1.5rem;
+  }
+
+  div#cards section:nth-of-type(even) span {
+    grid-column-start: 2;
+    grid-row-start: 1;
+  }
+  div#cards section:nth-of-type(even) img {
+    color:blue;
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+
+  div#cards img {
+    width: 100%;
+    margin: unset;
+    margin-bottom: -19px;
+  }
+
+  /*************************************
+  *             other css              *
+  *************************************/
+
   form input[type=submit] {
     margin-left: 1%;
   }
