--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -21,7 +21,6 @@
 
 body {
   font-family: "Noto Sans", sans-serif;
-  padding: 0px 15px;
 }
 
 .hidden {
@@ -48,6 +47,7 @@ header div {
 }
 
 header h1 {
+  font-size: 1.5rem;
   margin-bottom: 0px;
 }
 
@@ -123,6 +123,47 @@ nav a {
 
 nav a:hover {
   background-color: rgba(232, 168, 124, 0.6);
+}
+
+/*************************************
+ *            CSS cards              *
+ * dynamically created by JavaScript *
+ *************************************/
+
+div#cards {
+  display: grid;
+  /* grid-template-columns: 1fr; */
+  text-align: center;
+  margin-left: unset;
+  row-gap: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: var(--secondary-color);
+}
+
+div#cards section {
+  background-color: var(--fourth-color);
+}
+
+div#cards span span {
+  display: block;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+div#cards span span:nth-of-type(1) {
+  font-style: italic;
+  padding-top: 0.25rem;
+}
+
+div#cards h2 {
+  margin-bottom: 0;
+  font-size: 3rem;
+}
+
+div#cards img {
+  width: 100%;
+  margin-bottom: -2px;
 }
 
 /**********************
