updating lesson4 width to look better

--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -1,7 +1,10 @@
 
 /* Tablet Views ******************************/
 @media only screen and (min-width: 37.5em) {
-
+  main {
+    width: 75%;
+    margin: 0 auto;
+  }
   /*
   nav {
     display: flex;
