--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -1,7 +1,11 @@
 
 /* Tablet Views ******************************/
 @media only screen and (min-width: 37.5em) {
-
+  main {
+    width: 75%;
+    margin: 0 auto;
+  }
+  
   div.weather-summary span.left-cell {
     justify-self: right;
   }
@@ -106,18 +110,20 @@
 
   div.hero-placeholder {
     position: relative;
+    text-align: center;
   }
 
   div.weather-summary {
     grid-template-columns: 1fr 1fr;
   }
+
   div.weather-summary-header {
     position: absolute;
     color: black;
     background: rgb(53,0,255);
     background: linear-gradient(90deg, rgba(53,0,255,0.6463557993730408) 0%, rgba(98,169,255,1) 47%, rgba(53,0,255,0.65) 100%);
     top: 15%;
-    left: 1rem;
+    left: 3rem;
     width: 35%;
     margin-left: 0px;
     padding: 0 0 1rem 0;
