updating weather style table again

--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -149,12 +149,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     border: 1px solid black;
-    background-color: white;
+    background-color: black;
     column-gap: 1px;
     row-gap: 1px;
     margin-left: 0px;
     margin-bottom: 1rem;
-    padding-bottom: 1rem;
   }
 
 
