--- a/final_project/css/small.css
+++ b/final_project/css/small.css
@@ -7,7 +7,7 @@
  --orange: #f59125;
  --blue: #0d3bf5;
  --yellow: #f5e925;
- --dark-blue: #183642;
+ --light-blue: #00B2F5;
 }
 
 /****************
@@ -15,55 +15,277 @@
  ****************/
 
 body {
-  font-size: 18px;
+  margin: 0 auto;
+  width: 100%;
+
   background-color: var(--orange);
+
+  font-size: 18px;
   font-family: Alegreya, sans-serif;
 }
 
 p,
 span,
-footer {
+footer,
+a {
   font-family: Varela, sans-serif;
+}
+
+/**************
+ * header_top *
+ **************/
+
+div.header_top {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 25% 1fr 25%;
+
+  border-bottom: 1px solid gray;
+
+  background-color: var(--yellow);
+}
+
+div.header_top h1 {
+  justify-self: center;
+  align-self: center;
+
+  margin: 0;
+
+  font-size: 3rem;
+}
+
+div.header_top button {
+  border: none;
+  align-self: center;
+  justify-self: center;
+
+  width: 2.75rem;
+  height: 2.75rem;
+
+  color: black;
+  background-color: var(--orange);
+
+  font-size: 1.5rem;
+}
+
+/**************
+ * Navigation *
+ **************/
+
+nav {
+  margin-top: -1.1rem;
+}
+
+
+nav ul {
+  display: grid;
+
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 0;
+  margin-left: 0;
+  padding-left: 0rem;
+
+  list-style-type: none;
+}
+
+nav a {
+  display: block;
+
+  color: black;
+  background-color: var(--light-blue);
+  border: 1px solid black;
+
+  font-size: 2rem;
+  text-decoration: none;
+  text-align: center;
+}
+
+nav li.active a {
+  color: white;
+  background-color: var(--purple);
+}
+
+/*******************
+ * primary section *
+ *******************/
+
+fieldset {
+  margin: 0 auto;
+  margin-top: -2rem;
+  width: 85%;
+
+  border: none;
+
+  color: black;
+  background-color: var(--yellow);
+}
+
+legend {
+  padding-top: 4rem;
+
+  font-size: 3rem;
+  text-align: center;
+}
+/*****************
+ * Weather cards *
+ *****************/
+
+div.weather-grid {
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 1rem;
+  width: 100%;
+
+  text-align: center;
+}
+
+div.weather-grid div.weather-card {
+  display: grid;
+
+  grid-template-columns: 35% 1fr;
+  grid-column-start: span 3;
+  column-gap: 1.5rem;
+  align-items: center;
+
+  border: 1px solid black;
+  border-radius: 1.5rem;
+  background-color: var(--orange);
+
+  text-align: left;
+}
+
+div.weather-grid div.weather-card img {
+  width: 100%;
+  justify-self: right;
+}
+
+div.weather-grid div.weather-card div.weather-details span.day {
+  font-size: 1.5rem;
+}
+
+div.weather-grid div.weather-card div.weather-details span {
+  display: block;
+
+  font-family: Varela, sans-serif;
+}
+
+
+/****************
+ * Rental cards *
+ ****************/
+
+div.rental-card {
+  display: grid;
+
+  margin: 1rem;
+
+  border-radius: 1rem;
+
+  color: white;
+  background-color: var(--light-blue);
+}
+
+div.rental-card img {
+  order: -1;
+
+  margin: 1rem;
+  align-self: center;
+  justify-self: center;
+  width: 87%;
+
+  border-radius: 1rem;
+
+  background-color: white;
+}
+
+div.rental-card span.rental-text {
+  margin: 1rem;
+  padding: 1rem;
+
+  border: 0.1rem solid black;
+  border-radius: 1rem;
+
+  background-color: var(--purple);
+}
+
+div.rental-card span.rental-text a {
+  display: block;
+
+  margin: 1rem;
+
+  color: var(--blue);
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 1rem;
+
+  font-size: 2.44rem;
+  text-decoration: none;
+  text-align: center;
+}
+
+/**********
+ * Footer *
+ **********/
+
+footer {
+  margin-top: 1rem;
+  padding-top: 1rem;
+
+  color: blue;
+  background-color: var(--yellow);
+}
+
+footer div.icons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  align-items: center;
+}
+
+footer div.icons a {
+  width: 44px;
+  height: 44px;
+}
+
+footer div.icons a img {
+  margin: 0 auto;
+  width: 100%;
+}
+
+footer div.icons a img.correct-background {
+  background-color: white;
+}
+
+footer div.copyright {
+  padding-top: 1rem;
+  text-align: center;
+}
+
+footer div.copyright a {
+  display: block;
+  font-size: 2rem;
+}
+
+footer div.copyright span.other{
+  display: block;
+}
+
+footer div.copyright span.dash {
+  display: none;
 }
 
 /*************
  * other css *
  *************/
 
-.hidden {
-  display: hidden;
-}
-
-a {
-  font-family: Varela, sans-serif;
-}
-
-fieldset {
-  border: none;
-  color: black;
-  background-color: var(--yellow);
-}
-legend {
-  text-align: center;
-}
-
-div.rental-card {
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
-
-div.rental-card span.rental-text {
-  border: 0.5rem solid black;
-}
-
-div.rental-card span.rental-text a {
-  display:block;
-  text-align:right;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-
-div.rental-card img {
+img.logo {
   width: 100%;
+}
+
+/******************
+ * For JavaScript *
+ ******************/
+.hidden {
+  display: none;
 }
