--- a/final_project/css/large.css
+++ b/final_project/css/large.css
@@ -1,34 +1,52 @@
 @media only screen and (min-width: 74rem) { /* 1,100px */
-  div.header_top {
+
+  /**************
+   * header_top *
+   **************/
+
+  header div.header_top {
     grid-template-columns: 50% 1fr;
   }
 
-  div.header_top h1 {
+  header img.logo {
+    justify-self: right;
+
+    padding-right: 2rem;
+    width: 15%;
+  }
+
+  header div.header_top h1 {
     justify-self: left;
 
     font-size: 5rem;
   }
 
-  img.logo {
-    justify-self: right;
-    width: 15%;
-    padding-right: 2rem;
-  }
-
-  header button#nav-button {
+  header div.header_top button {
     display: none;
   }
+
+  /**************
+   * Navigation *
+   **************/
 
   nav ul {
     grid-template-columns: repeat(6, 1fr);
   }
 
-  div.side-by-side {
+  /***********************************
+   * Side-by-side weather and alerts *
+   ***********************************/
+
+   div.side-by-side {
     grid-template-columns: 75% 25%;
     padding-top: 1rem;
 
     width: 92%;
   }
+
+  /******************
+   * Weather alerts *
+   ******************/
 
   fieldset.alerts {
     width: 88%;
@@ -39,13 +57,9 @@
     text-align: center;
   }
 
-  fieldset.alerts div.warning-table {
+  div.warning-table {
     display: grid;
     grid-template-columns: 1fr 1fr;
-  }
-
-  fieldset.weather {
-    width: 114%;
   }
   
   div.warning-table div.warning-item {
@@ -57,6 +71,14 @@
     align-self: center;
   }
 
+  /*****************
+   * Weather cards *
+   *****************/
+
+  fieldset.weather {
+    width: 114%;
+  }
+
   div.weather-details {
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
@@ -65,16 +87,22 @@
   div.weather-grid div.weather-card {
     grid-template-columns: 15% 1fr;
   }
+  
+  div.weather-card img {
+    justify-self: center;
+  }
 
-  span.day {
+  div.weather-card div.weather-details span.day {
     grid-column-start: span 3;
     margin-right: 7rem;
     justify-self: center;
   }
 
-  div.weather-grid div.weather-card img {
-    justify-self: center;
-  }
+
+
+  /****************
+   * Rental cards *
+   ****************/
 
   div.rental-card {
     grid-template-columns: 1fr 1fr;
@@ -84,13 +112,27 @@
     align-self: end;
   }
 
+  /********************
+   * For rentals.html *
+   ********************/
+
+
+  div#scroll {
+    width: 40%;
+    margin-bottom: 1rem;
+  }
+
+  /**********
+   * Footer *
+   **********/
+
   footer {
     grid-template-columns: 73% 25% 1fr;
     width: 93.4%;
     margin: 0 auto;
   }
 
-  div.copyright {
+  footer div.copyright {
     justify-self: center;
   }
 }
