adding footer time

--- a/final_project/css/medium.css
+++ b/final_project/css/medium.css
@@ -178,4 +178,9 @@
     display: inline;
   }
 
+  footer div.time {
+    grid-row-start: 2;
+    grid-column-start: span 3;
+    justify-self: center;
+  }
 }
