--- a/final_project/css/small.css
+++ b/final_project/css/small.css
@@ -274,13 +274,15 @@ div.rental-card span.rental-text a {
   display: block;
 
   margin: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   color: var(--blue);
   background-color: white;
   border: 1px solid black;
   border-radius: 1rem;
 
-  font-size: 2.44rem;
+  font-size: 1rem;
   text-decoration: none;
   text-align: center;
 }
