--- a/final_project/css/large.css
+++ b/final_project/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (  ) { /* 1,100px */
+@media only screen and (min-width: 74rem) { /* 1,100px */
 
   /**************
    * header_top *
